<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.CreateNoteScreen"
    android:background="@color/colorMain">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:clipToPadding="false"
        android:paddingBottom="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">
            
            <ImageView
                android:id="@+id/imageBack"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_back"
                android:layout_marginTop="25dp"
                android:layout_marginStart="8dp"
                app:tint="@color/colorIcons"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageView
                android:id="@+id/imageSave"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/bg_done_button"
                app:tint="@color/colorIcons"
                android:src="@drawable/ic_done"
                android:padding="5dp"
                app:layout_constraintTop_toTopOf="@id/imageBack"
                app:layout_constraintBottom_toBottomOf="@id/imageBack"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"/>

            <EditText
                android:id="@+id/inputNoteTitle"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:background="@null"
                android:fontFamily="@font/bold"
                android:hint="@string/no_title"
                android:textColorHint="@color/colorTextHint"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/imageBack"/>


            <TextView
                android:id="@+id/textDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:includeFontPadding="false"
                android:textColor="@color/colorIcons"
                android:textSize="13sp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/inputNoteTitle"
                app:layout_constraintStart_toStartOf="@id/inputNoteTitle"
                app:layout_constraintEnd_toEndOf="@id/inputNoteTitle"/>
            
            <EditText
                android:id="@+id/inputNoteSubtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/medium"
                android:background="@null"
                android:hint="@string/note_subtitle"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:paddingVertical="8dp"
                android:textColor="@color/colorTextSubtitle"
                android:textColorHint="@color/colorTextHint"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@id/viewSubtitleIndicator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textDate"/>

            <ImageView
                android:id="@+id/imgNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/inputNoteSubtitle"/>

            <ImageView
                android:id="@+id/imgRemoveImage"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/bg_delete"
                android:padding="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_delete"
                app:tint="@color/white"
                app:layout_constraintEnd_toEndOf="@id/imgNote"
                app:layout_constraintTop_toTopOf="@id/imgNote"
                android:visibility="gone"/>
            
            <LinearLayout
                android:id="@+id/layoutWebURL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/imgNote">
                
                <TextView
                    android:id="@+id/txtWebURL"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoLink="web"
                    android:fontFamily="@font/regular"
                    android:includeFontPadding="false"
                    android:textSize="15sp"/>

                <ImageView
                    android:id="@+id/imgRemoveWebURL"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_delete"
                    app:tint="@color/colorDelete"/>

            </LinearLayout>

            
            <View
                android:id="@+id/viewSubtitleIndicator"
                android:layout_width="8dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/bg_subtitle_indicator"
                app:layout_constraintTop_toTopOf="@id/inputNoteSubtitle"
                app:layout_constraintBottom_toBottomOf="@id/inputNoteSubtitle"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/inputNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:padding="8dp"
                android:background="@null"
                android:fontFamily="@font/regular"
                android:gravity="top"
                android:hint="@string/type_your_note"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:minHeight="130dp"
                android:textColor="@color/white"
                android:textColorHint="@color/colorTextHint"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutWebURL"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

    <include layout="@layout/layout_miscellaneous"/>


</androidx.coordinatorlayout.widget.CoordinatorLayout>